--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   },
   "homepage": "https://github.com/Bedenke/dank-cli#readme",
   "dependencies": {
+    "cookie-parser": "^1.4.3",
+    "dank-web": "file:../dank-web",
     "express": "^4.16.3",
     "fs-extra": "^6.0.0",
     "inquirer": "^6.0.0",
@@ -33,14 +35,14 @@
     "node-watch": "^0.5.8",
     "slugify": "^1.3.0",
     "typescript": "^2.8.1",
-    "webpack": "^4.15.1",
-    "dank-web": "file:../dank-web"
+    "webpack": "^4.15.1"
   },
   "prettier": {
     "tabWidth": 2,
     "printWidth": 100
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.1",
     "@types/express": "^4.16.0",
     "@types/fs-extra": "^5.0.2",
     "@types/inquirer": "0.0.42",
